--- a/Version.config
+++ b/Version.config
@@ -1,9 +1,14 @@
+TOOL=pinentry
 
-pinentryVersion=$(sed -nE '/^#define VERSION "([0-9]\.[0-9]+\.[0-9]+)"$/{s//\1/p;q;}' < "$(dirname "${BASH_SOURCE[0]}")/Source/pinentry-current/config.h")
-
+pinentryVersion=$(sed -nE '/^#define VERSION "(.*)"$/{s//\1/p;q;}' < "$(dirname "${BASH_SOURCE[0]}")/../config.h")
 if [[ -z "$pinentryVersion" ]] ;then
 	echo "Unable to find pinentry version!" >&2
 	exit 1
 fi
 
-VERSION="${pinentryVersion}${PRERELEASE}"
+MAJOR=${pinentryVersion%%.*}
+MINOR=${pinentryVersion#*.}
+REVISION=3
+
+
+VERSION="${MAJOR}.${MINOR}${REVISION:+.$REVISION}${PRERELEASE}"
